nome sezione per mobile

--- a/css/stile.css
+++ b/css/stile.css
@@ -31,6 +31,26 @@ body {
     cursor: pointer;
 }
 
+.linea1, .linea2, .linea3 {
+    width: 35px;
+    height: 5px;
+    background-color: #333;
+    margin: 6px 0;
+    transition: 0.4s;
+}
+
+.change .linea1 {
+    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+    transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.change .linea2 {opacity: 0;}
+
+.change .linea3 {
+    -webkit-transform: rotate(45deg) translate(-8px, -8px);
+    transform: rotate(45deg) translate(-8px, -8px);
+}
+
 #menuMobile {
     display: none;
     float: left;
@@ -994,4 +1014,10 @@ h4.successo {
     padding: 0.7em;
     font-size: 1.3em;
     font-weight: bolder;
+}
+
+/*========= sezione ============*/
+
+.sezioneMobile {
+    display: none;
 }
