--- a/css/stileMobile.css
+++ b/css/stileMobile.css
@@ -84,4 +84,23 @@
         height: 11.5em;
     }
 
+    .sezioneMobile {
+        display: block;
+        float: left;
+        width: 100%;
+        height: auto;
+        font-size: 1.4em;
+        text-align: center;
+        color: #ffffff;
+        font-weight: bold;
+        background: #00b8e6;
+        padding: 0.2em;
+        margin-top: 2.5em;
+    }
+
+    .upnav {
+        border-bottom: 2px solid #0000cc;
+        position: fixed;
+    }
+
 }
