sezione contatti tablet e font elimina

--- a/css/stile.css
+++ b/css/stile.css
@@ -478,8 +478,8 @@ hr {
 
 .eliminaEvento {
     text-align: center;
-    padding: 10px;
-    font-size: 20px;
+    padding: 0.2em;
+    font-size: 1.2em;;
     font-weight: bold;
 }
 
