--- a/css/stileMobile.css
+++ b/css/stileMobile.css
@@ -103,4 +103,37 @@
         position: fixed;
     }
 
+    .titoloContatti {
+        display: none;
+    }
+
+    .contatti {
+        width: 60%;
+        margin-left: 20%;
+        margin-bottom: 3em;
+        margin-top: 1em;
+    }
+
+    .sede {
+        width: 100%;
+        margin-bottom: 1em;
+    }
+
+    .box {
+        margin-left: 15%;
+    }
+
+    .contatti hr {
+        margin-right: 0;
+    }
+
+    .comeContattarci {
+        text-align: center;
+        margin-left: 0;
+    }
+
+    .eliminaEvento {
+        font-size: 1em;
+        padding-top: 1.1em;
+    }
 }
