--- a/css/stile.css
+++ b/css/stile.css
@@ -478,7 +478,9 @@ hr {
 
 .eliminaEvento {
     text-align: center;
-    padding: 0.2em;
+    padding-top: 0.8em;
+    padding-right: 0.2em;
+
     font-size: 1.2em;;
     font-weight: bold;
 }
@@ -922,14 +924,18 @@ hr {
 
 .articoloHome {
     float: left;
-    width: 50%;
+    width: 35%;
+    margin-left: 9%;
     margin-top: 50px;
+    border: 1.5px solid #000000;
+    border-radius: 0px 30px 0 30px;
+    padding: 0.4em;
+    background: #ccf5ff;
 }
 
 .boxArticoloHome {
-    margin-left: 20%;
-    width: 60%;
-    height: 30em;
+    width: 100%;
+    height: 25em;
 }
 
 .immagineArticoloHome {
@@ -940,6 +946,7 @@ hr {
 .immagineArticoloHome img {
     float: left;
     width: 100%;
+    border-top-right-radius: 25px;
 }
 
 .titoloArticoloHome {
