attenzione ai padding inutili che allargano il body e si creano spazi bianchi (in questo caso su sezioneMobile)

--- a/css/stileMobile.css
+++ b/css/stileMobile.css
@@ -95,7 +95,8 @@
         color: #ffffff;
         font-weight: bold;
         background: #00b8e6;
-        padding: 0.2em;
+        padding-top: 0.2em;
+        padding-bottom: 0.2em;
         margin-top: 2.5em;
     }
 
@@ -118,6 +119,7 @@
     .sede {
         width: 100%;
         margin-bottom: 1em;
+        margin-right: 0;
     }
 
     .box {
