--- a/css/stileMobile.css
+++ b/css/stileMobile.css
@@ -153,7 +153,7 @@
         width: 100%;
     }
 
-    .ricerca input[type=text] {
+    .ricercaPiccola input[type=text] {
         float: left;
         width: 70%;
         border-radius: 20px;
