--- a/css/stile.css
+++ b/css/stile.css
@@ -134,13 +134,11 @@ body {
 .ricerca input[type=text] {
     float: right;
     padding: 3.5px;
-    border: 1.5px;
+    border: 1.5px solid #000000;
     margin-right: 0em;
     font-size: 13px;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
-    border-style: solid;
-    border-color: black;
     text-align: left;
     margin-top: 9px;
     height: 25px;
