--- a/css/stileMobile.css
+++ b/css/stileMobile.css
@@ -37,7 +37,8 @@
     }
 
     .bottoniEventi a {
-        margin-left: 23%;
+        margin-left: 16%;
+        width: 26%;
     }
 
     .boxFotoCitta {
@@ -122,8 +123,15 @@
         margin-right: 0;
     }
 
-    .box {
+    .contatti {
+        width: 70%;
         margin-left: 15%;
+    }
+
+    .box {
+        margin-left: 5%;
+        text-align: center;
+        width: 80%;
     }
 
     .contatti hr {
@@ -159,5 +167,10 @@
         border-radius: 20px;
         margin-left: 15%;
         font-size: 1em;
+        border: 1px solid #cccccc;
+    }
+
+    .messaggioSpeciale {
+        display: none;
     }
 }
