--- a/css/stileMobile.css
+++ b/css/stileMobile.css
@@ -174,5 +174,30 @@
         display: none;
     }
 
+}
 
+/*========== smartphone ===========*/
+
+@media only screen and (max-width: 670px) {
+
+    .boxFotoCitta {
+        width: 60%;
+        margin-left: 20%;
+    }
+
+    .ricercaHome {
+        display: none;
+    }
+
+    .centro {
+        display: none;
+    }
+
+    .logo {
+        display: none;
+    }
+
+    .miniLogo {
+        display: block;
+    }
 }
