--- a/css/stile.css
+++ b/css/stile.css
@@ -25,6 +25,10 @@ body {
     height: 3.4em;
 }
 
+.account {
+    display: none;
+}
+
 .hamburger {
     float: right;
     display: none;
@@ -94,12 +98,11 @@ body {
 }
 
 .miniLogo {
+    float: left;
     margin-top: -0.6em;
-    width: 4.5em;
     display: none;
-    margin-left: auto;
-    margin-right: auto;
 }
+
 
 .lenteSearch button {
     float: right;
