--- a/css/stile.css
+++ b/css/stile.css
@@ -55,6 +55,30 @@ body {
     transform: rotate(45deg) translate(-8px, -8px);
 }
 
+#menuAccedi {
+    display: none;
+    float: left;
+    width: 99%;
+    padding-left: 1%;
+    background: #80e5ff;
+    position: fixed;
+    top: 3.4em;
+    text-align: center;
+    padding-top: 0.6em;
+    padding-bottom: 0.6em;
+}
+
+#menuAccedi a:link {
+    color: #000000;
+    text-decoration: none;
+}
+
+#menuAccedi a:visited {
+    color: #000000;
+    text-decoration: none;
+}
+
+
 #menuMobile {
     display: none;
     float: left;
@@ -624,7 +648,8 @@ hr {
 }
 
 .foto {
-    margin-top: 30px;
+    float: left;
+    padding-top: 30px;
     width: 100%;
 }
 
