--- a/css/stileMobile.css
+++ b/css/stileMobile.css
@@ -273,4 +273,22 @@
         width: 100%;
         margin-bottom: 0.5em;
     }
+
+
+    .fotoHome {
+        display: none;
+    }
+
+    .imgCitta {
+        display: none;
+    }
+
+    .sezioneMobile {
+        margin-top: 2.5em;
+    }
+
+    .foto {
+        padding-top: 2em;
+    }
+
 }
