--- a/css/stileMobile.css
+++ b/css/stileMobile.css
@@ -52,6 +52,7 @@
         border: 1.5px solid #000000;
         border-radius: 0px 30px 0 30px;
         margin-left: 10%;
+        height: auto;
     }
 
     .boxArticoloHome {
@@ -255,6 +256,8 @@
         margin-left: 20%;
         margin-top: 1.1em;
     }
+
+
 
     .immagineArticoloHome {
         width: 100%;
