--- a/css/stile.css
+++ b/css/stile.css
@@ -460,7 +460,7 @@ hr {
 /*==============BOX ARTICOLO==============*/
 
 .boxTotaleTitolo {
-    width: 86.15%;
+    width: 86%;
     margin-left: 7%;
 }
 
@@ -541,12 +541,15 @@ hr {
     width: 86%;
     height: auto;
     background-color: #ffffff;
-    border: 1px solid #000000;
     margin-top: 0px;
     margin-left: 7%;
     margin-right: 7%;
     text-align: center;
     overflow: auto;
+}
+
+.immagineTesto {
+    border: 1px solid #000000;
 }
 
 .immagineTesto p {
@@ -710,11 +713,17 @@ hr {
 
 /*==========ACCESSO-REGISTRAZIONE==========*/
 
-.testa {
+.boxTesta {
     float: left;
+    width: 100%;
+    text-align: center;
+}
+
+.testa {
     width: 40%;
     margin-top: 1em;
-    margin-left: 28%;
+    margin-left: auto;
+    margin-right: auto;
     color: black;
     background: #00b8e6;
     text-align: center;
@@ -737,9 +746,22 @@ hr {
 
 .inserisciDati {
     float: left;
-    width: 40%;
-    margin-left: 30%;
+    width: 100%;
     margin-top: 0.8em;
+}
+
+.inserisciDati fieldset {
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.input2 {
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 1.2em;
+    margin-bottom: 0.5em;
 }
 
 .input {
@@ -747,12 +769,6 @@ hr {
     float: left;
 }
 
-.input2 {
-    width: 100%;
-    float: left;
-    font-size: 1.2em;
-    margin-bottom: 0.5em;
-}
 
 .input label {
     float: left;
@@ -765,9 +781,10 @@ hr {
 }
 
 .input input {
-    float: left;
     height: 2.5em;
-    width: 98%;
+    width: 97%;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 1em;
     border: 0.5px solid #999999;
     padding-left: 0.4em;
@@ -787,7 +804,8 @@ hr {
     border-radius: 5px 5px 5px 5px;
     padding: 5px 10px;
     font-weight: bold;
-    margin: 0 auto 20px;
+    margin-left: auto;
+    margin-right: auto;
     display: block;
 }
 
@@ -815,11 +833,10 @@ hr {
     color: red;
     font-weight: bold;
     text-align: center;
-    margin: 10px;
     float: left;
-    width: 40%;
-    margin-left: 28%;
-    padding: 20px;
+    width: 100%;
+    margin-top: 0.8em;
+    margin-bottom: 0.8em;
 }
 
 .box_successo {
@@ -831,12 +848,12 @@ hr {
     width: 40%;
     margin-left: 28%;
     padding: 20px;
+
 }
 
 .linkAccessoRegistra {
     color: black;
-    width: 40%;
-    margin-left: 30%;
+    width: 100%;
     font-weight: bold;
     text-align: center;
     float: left;
