--- a/css/stileMobile.css
+++ b/css/stileMobile.css
@@ -195,6 +195,14 @@
     .linkAccessoRegistra {
         font-size: 1.3em;
     }
+
+    .aggiungiArticolo {
+
+    }
+
+    .sceltaCittaTipologia {
+
+    }
 }
 
 /*========== smartphone ===========*/
