sezione prenotazione medi query

--- a/css/stile.css
+++ b/css/stile.css
@@ -66,6 +66,7 @@ body {
     text-align: center;
     padding-top: 0.6em;
     padding-bottom: 0.6em;
+    z-index: 1;
 }
 
 #menuAccedi a:link {
@@ -87,6 +88,7 @@ body {
     position: fixed;
     top: 3.4em;
     text-align: center;
+    z-index: 1;
 }
 
 #menuMobile a {
@@ -339,30 +341,26 @@ hr {
     padding-left: 25px;
 }
 
-.coloreEsterno {
-    float: left;
-    width: 100%;
-    background-color: #000000;
-}
-
 .contorno {
     width: 90%;
-    height: 55em;
     margin: 5%;
-    border-radius: 30px;
-    background-color: #ffffff;
+}
+
+.fieldset {
+    width: 25em;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .titoloAcquisto {
     float: left;
     text-align: left;
+    width: 70%;
 }
 
 .boxTornaIndietro {
     float: left;
-    width: 90%;
-    margin-left: 5%;
-    margin-top: 3em;
+    width: 100%;
 }
 
 .tornaIndietro {
@@ -399,6 +397,7 @@ hr {
     font-size: 1.3em;
     margin-left: 10%;
     margin-top: 4em;
+    margin-bottom: 1em;
     font-weight: bold;
     text-align: center;
 }
@@ -406,7 +405,7 @@ hr {
 .numeroBigliettiAcquistoBiglietti {
     float: left;
     width: 80%;
-    margin-left: 10%;
+    margin-left: 9%;
     margin-top: 2em;
     font-size: 1.2em;
     text-align: center
@@ -422,28 +421,32 @@ hr {
 .inserisciAcquistaBiglietto {
     float: left;
     width: 80%;
-    margin-left: 10%;
     margin-top: 2em;
     font-size: 1.2em;
-    text-align: center
+    text-align: center;
+    margin-left: 10%;
 }
 
 .inserisciAcquistaBiglietto input {
-    float: left;
-    width: 25%;
+    width: 70%;
+    margin-left: auto;
+    margin-left: auto;
     margin-top: 0.3em;
     font-size: 1em;
     padding: 0.2em;
     border-radius: 10px;
     border: 1.5px solid #999999;
-    margin-left: 36.7%;
+}
+
+.bottonePrenota {
+    width: 100%;
+    float: left;
+    text-align: center;
+    margin-top: 2em;
 }
 
 .prenota {
-    float: left;
-    width: 20%;
-    margin-top: 3em;
-    margin-left: 39.9%;
+    width: 8em;
     text-align: center;
     font-size: 1.5em;
     background: #b3ccff;
@@ -918,7 +921,6 @@ hr {
     width: 8em;
     text-align: left;
     margin-bottom: 1.6em;
-    margin-right: 17em;
 }
 
 .bottonePubblica {
@@ -1008,7 +1010,7 @@ hr {
 .articoloHome {
     float: left;
     width: 35%;
-    height: 27em;
+    height: 28em;
     margin-left: 9%;
     margin-top: 50px;
     border: 1.5px solid #000000;
@@ -1019,7 +1021,6 @@ hr {
 
 .boxArticoloHome {
     width: 100%;
-    height: 25em;
 }
 
 .immagineArticoloHome {
