--- a/css/stile.css
+++ b/css/stile.css
@@ -396,7 +396,7 @@ hr {
     width: 80%;
     font-size: 1.3em;
     margin-left: 10%;
-    margin-top: 4em;
+    margin-top: 2em;
     margin-bottom: 1em;
     font-weight: bold;
     text-align: center;
@@ -443,6 +443,7 @@ hr {
     float: left;
     text-align: center;
     margin-top: 2em;
+    margin-bottom: 1em;
 }
 
 .prenota {
