--- a/css/stileMobile.css
+++ b/css/stileMobile.css
@@ -340,13 +340,16 @@
     }
 
     .inserisciAcquistaBiglietto input {
-        margin-left: 5%;
-        width: 86%;
+        width: 90%;
     }
 
     .tornaIndietro {
-        float: left;
         margin-bottom: 0.5em;
+        margin-left: auto;
+        margin-right: auto;
+        float: none;
+        width: 60%;
+        text-align: center;
     }
 
     .boxTitolo {
@@ -428,6 +431,12 @@
 
     .titoloAcquisto {
         font-size: 0.8em;
+        text-align: center;
     }
 
+    .numeroBigliettiAcquistoBiglietti {
+        width: 100%;
+        margin-left: 0;
+        font-size: 1.1em;
+    }
 }
