--- a/css/stile.css
+++ b/css/stile.css
@@ -342,8 +342,8 @@ hr {
 }
 
 .contorno {
-    width: 90%;
-    margin: 5%;
+    width: 94%;
+    margin: 3%;
 }
 
 .fieldset {
@@ -1077,9 +1077,9 @@ hr {
 
 .messaggioPrenotazione {
     width: 70%;
-    float: left;
-    margin-left: 15%;
-    margin-top: 3em;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2em;
     padding: 0.5em;
     border: 2px solid #000000;
 }
