--- a/css/stilePrint.css
+++ b/css/stilePrint.css
@@ -24,4 +24,73 @@
     .bottoniEventi {
         display: none;
     }
+
+    .articoloHome {
+        border: none;
+        height: 18em;
+
+    }
+
+    .immagineArticoloHome img {
+        border-radius: 0;
+    }
+
+    .testoArticoloHome a {
+        color: #000000;
+    }
+
+    /*========== SEZIONE CITTA========*/
+
+    .boxTitolo {
+        color: #000000;
+        width: 100%;
+        height: auto;
+        margin-top: 0.5em;
+    }
+
+    .boxDataEvento {
+        width: 100%;
+        margin-top: 0;
+        height: auto;
+        margin-bottom: 1em;
+        margin-top: 0.5em;
+    }
+
+    .dataEvento {
+        color: #000000;
+        text-align: right;
+        font-size: 0.8em;
+        padding: 0;
+    }
+
+    .boxEliminaEvento {
+        display: none;
+    }
+
+    .boxImmagineTesto {
+        margin-bottom: 1.5em;
+    }
+
+    .immagineTesto {
+        border: none;
+    }
+
+    .immagineTesto img {
+        padding-top: 0;
+        padding-bottom: 0.5em;
+    }
+
+    .immagineTesto p {
+        padding-top: 0;
+    }
+
+    .immagineTesto a {
+        display: none;
+    }
+
+    /* =============== CONTATTI ==============*/
+
+    .contatti {
+
+    }
 }
