--- a/css/stilePrint.css
+++ b/css/stilePrint.css
@@ -91,6 +91,48 @@
     /* =============== CONTATTI ==============*/
 
     .contatti {
-
+        width: 100%;
+        margin-left: 0;
+        margin-top: 2em;
     }
+
+    .contatti hr {
+        display: none;
+    }
+
+    .box {
+        width: 100%;
+        margin-left: 36%;
+    }
+
+    .sede {
+        width: 100%;
+        margin-right: 0;
+        margin-top: 4em;
+    }
+
+    /* =============== NUOVO ARTICOLO ==============*/
+
+    .tornaIndietroNuovoArticolo {
+        display: none;
+    }
+
+    /* =============== PROFILO UTENTE ==============*/
+
+    .testa {
+        border-color: #000000;
+    }
+
+    .linkAccessoRegistra {
+        display: none;
+    }
+
+    .logout {
+        display: none;
+    }
+
+    .input2 {
+        font-size: 1.6em;
+    }
+
 }
