--- a/css/stile.css
+++ b/css/stile.css
@@ -13,7 +13,6 @@ body {
 
 body {
     background-color: #ffffff;
-    color: #000000;
 }
 
 /*============HEADER============*/
@@ -195,7 +194,7 @@ body {
 
 .topnav {
     float: left;
-    margin-top: 0em;
+    margin-top: 0;
     overflow: hidden;
     background-color: #43ccff;
     width: 100%;
@@ -307,49 +306,6 @@ hr {
 }
 
 /*============DESCRIZIONE ARTICOLO==========*/
-
-
-
-.boxDescrizioneArticolo {
-    float: left;
-    width: 100%;
-}
-
-.titoloDescrizioneArticolo {
-    float: left;
-    width: 90%;
-    text-align: left;
-    padding-bottom: 20px;
-    padding-top: 10px;
-    margin-top: 20px;
-    margin-left: 40px;
-}
-
-.immagineDescrizioneArticolo {
-    float: left;
-    width: 40%;
-    height: auto;
-}
-
-.immagineDescrizioneArticolo img {
-    width: 90%;
-    padding-left: 40px;
-}
-
-.infoDescrizioneArticolo {
-    float: left;
-    width: 30%;
-    text-align: left;
-    padding-left: 40px;
-    padding-top: 30px;
-}
-
-.testoDescrizioneArticolo {
-    float: left;
-    width: 55%;
-    text-align: left;
-    padding-left: 25px;
-}
 
 .contorno {
     width: 94%;
@@ -485,7 +441,7 @@ hr {
 .boxTitolo {
     float: left;
     width: 59%;
-    height: 65px;
+    height: 4em;
     background-color: #000000;
     margin-top: 2em;
     color: #ffffff;
@@ -518,7 +474,7 @@ hr {
     margin-left: 0em;
     margin-top: 2em;
     color: #ffffff;
-    height: 65px;
+    height: 4em;
 }
 
 .dataEvento {
@@ -530,7 +486,7 @@ hr {
 .boxEliminaEvento {
     float: right;
     width: 13%;
-    height: 65px;
+    height: 4em;
     margin-top: 2em;
     background: #000000;
     color: #ffffff;
@@ -572,7 +528,7 @@ hr {
 
 .immagineTesto p {
     text-align: left;
-    padding: 20px;
+    padding: 1.3em;
 }
 
 .immagineTesto img {
@@ -663,9 +619,9 @@ hr {
 }
 
 .indirizzoCompleto {
-    margin-top: 10px;
+    margin-top: 0.5em;
     text-align: center;
-    font-size: 20px;
+    font-size: 1.2em;
 }
 
 /*==========HOME=========*/
@@ -676,7 +632,7 @@ hr {
 
 .foto {
     float: left;
-    padding-top: 30px;
+    padding-top: 1.8em;
     width: 100%;
 }
 
@@ -817,10 +773,10 @@ hr {
 .logout button {
     background: #ff0000;
     border: solid thin black;
-    font-size: 16px;
+    font-size: 1em;
     text-align: center;
     border-radius: 5px 5px 5px 5px;
-    padding: 5px 10px;
+    padding: 0.3em 0.6em;
     font-weight: bold;
     margin-left: auto;
     margin-right: auto;
@@ -857,18 +813,6 @@ hr {
     margin-bottom: 0.8em;
 }
 
-.box_successo {
-    color: green;
-    font-weight: bold;
-    text-align: center;
-    margin: 10px;
-    float: left;
-    width: 40%;
-    margin-left: 28%;
-    padding: 20px;
-
-}
-
 .linkAccessoRegistra {
     color: black;
     width: 100%;
@@ -902,8 +846,8 @@ hr {
 }
 
 .aggiungiArticolo h4 {
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin-top: 0.3em;
+    margin-bottom: 0.3em;
 }
 
 .sceltaCittaTipologia {
@@ -946,11 +890,8 @@ hr {
 }
 
 .pubblica {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 30px;
-    padding-right: 30px;
-    font-size: 15px;
+    padding: 0.7em 2em 0.7em 2em;
+    font-size: 0.8em;
     border-radius: 5px 5px 5px 5px;
 }
 
@@ -1029,7 +970,7 @@ hr {
     width: 35%;
     height: 28em;
     margin-left: 9%;
-    margin-top: 50px;
+    margin-top: 3.1em;
     border: 1.5px solid #000000;
     border-radius: 0px 30px 0 30px;
     padding: 0.4em;
