--- a/css/stile.css
+++ b/css/stile.css
@@ -519,11 +519,16 @@ hr {
     margin-left: 7%;
     margin-right: 7%;
     text-align: center;
-    overflow: auto;
 }
 
 .immagineTesto {
     border: 1px solid #000000;
+}
+
+.immagineTesto::after {
+    content: "";
+    clear: both;
+    display: table;
 }
 
 .immagineTesto p {
@@ -534,7 +539,7 @@ hr {
 .immagineTesto img {
     float: left;
     width: 15em;
-    padding: 1.3em 1.3em 0em 1.3em;
+    padding: 1.3em 1.3em 1.3em 1.3em;
 }
 
 /* =============== CONTATTI ==============*/
@@ -986,17 +991,19 @@ hr {
 .articoloHome {
     float: left;
     width: 35%;
-    height: 28em;
+    min-height: 28em;
     margin-left: 9%;
     margin-top: 3.1em;
     border: 1.5px solid #000000;
     border-radius: 0px 30px 0 30px;
     padding: 0.4em;
     background: #ccf5ff;
+    overflow: auto;
 }
 
 .boxArticoloHome {
     width: 100%;
+    height: auto;
 }
 
 .immagineArticoloHome {
