schermi grandi articolo home

--- a/css/stile.css
+++ b/css/stile.css
@@ -989,15 +989,21 @@ hr {
     text-decoration: none;
 }
 
+.boxPrincipaleHome {
+    float: left;
+    width: 50%;
+    height: 30em;
+    margin-top: 3.1em;
+}
+
 .articoloHome {
     float: left;
-    width: 35%;
-    height: 28em;
-    margin-left: 9%;
-    margin-top: 3.1em;
+    width: 70%;
+    height: auto;
+    margin-left: 18%;
     border: 1.5px solid #000000;
     border-radius: 0px 30px 0 30px;
-    padding: 0.4em;
+    padding: 0.4em 0.4em 1.4em 0.4em;
     background: #ccf5ff;
     overflow: auto;
 }
@@ -1021,14 +1027,14 @@ hr {
 .titoloArticoloHome {
     float: left;
     width: 100%;
-    padding: 4px;
     text-align: left;
+    margin-top: 0.4em;
 }
 
 .testoArticoloHome {
     float: left;
     width: 100%;
-    padding: 5px;
+    margin-top: 0.4em;
 }
 
 /*========== 404 =============*/
