--- a/css/stile.css
+++ b/css/stile.css
@@ -837,6 +837,16 @@ hr {
     margin-bottom: 0.8em;
 }
 
+.box_successo {
+    color: green;
+    font-weight: bold;
+    text-align: center;
+    float: left;
+    width: 100%;
+    margin-top: 0.8em;
+    margin-bottom: 0.8em;
+}
+
 .linkAccessoRegistra {
     color: black;
     width: 100%;
